project/logs/20250722_111445log
use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel
complate crate D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl, profile:ps_6_0

Object3d.PS.hlsl:54:9: error: cannot jump from switch statement to this case label
        case 2:
        ^
Object3d.PS.hlsl:51:19: note: jump bypasses variable initialization
            float cos = saturate(dot(normalize(input.normal), -gDirectionalLight.direction));
                  ^

